
	* twittering-mode.el: Replace hard-coded hostnames with
	variables and functions. Thanks to William Xu.
	(twittering-api-host): new variable.
	(twittering-api-search-host): new variable.
	(twittering-web-host): new variable.
	(twittering-get-search-url): new function.
	(twittering-make-clickable-status-datum): call
	`twittering-get-search-url' instead of using hard-coded hostname.

2010-04-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-buffer-active-p): renamed
	`twittering-buffer-related-p'.

	* twittering-mode.el (twittering-start): check the value of
	`twittering-timer-for-redisplaying' before setting timer.

	* twittering-mode.el: Multiple buffers are supported.
	(twittering-buffer-info-list): new variable for managing multiple
	buffers.
	(twittering-buffer): both of the function and the variable are
	removed.
	(twittering-update-mode-line): remove timeline spec from mode-line
	because it is displayed as the name of buffer.
	(twittering-switch-timeline): removed.
	(twittering-get-buffer-list): new function.
	(twittering-get-active-buffer-list): new function.
	(twittering-buffer-related-p): modified to support multiple buffers.
	(twittering-buffer-p): new function.
	(twittering-buffer-active-p): new function.
	(twittering-get-buffer-from-spec): new function.
	(twittering-get-buffer-from-spec-string): new function.
	(twittering-get-timeline-spec-for-buffer): new function.
	(twittering-get-timeline-spec-string-for-buffer): new function.
	(twittering-current-timeline-spec): return timeline spec for the
	current buffer.
	(twittering-current-timeline-spec-string): return timeline spec
	string for the current buffer.
	(twittering-register-buffer): new function.
	(twittering-unregister-buffer): new function.
	(twittering-unregister-killed-buffer): new function.
	(twittering-replace-spec-string-for-buffer): new function.
	(twittering-set-active-flag-for-buffer): new function.
	(twittering-toggle-activate-buffer): new function.